AB#1060 general fix for disabled buttons in windows high contrast mode

--- a/desktop/src/@batch-flask/ui/buttons/button.scss
+++ b/desktop/src/@batch-flask/ui/buttons/button.scss
@@ -180,5 +180,9 @@ bl-button {
 @media (forced-colors: active) {
     bl-button {
         border: 1px solid currentColor;
+
+        &.disabled {
+            opacity: 0.3;
+        }
     }
 }
